--- a/index.html
+++ b/index.html
@@ -36,26 +36,25 @@
     <![endif]-->
 </head>
 
-<body id="page-top" class="index" ng-app="app" ng-controller="MainController">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" ng-app="app" ng-controller="MainController">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <!-- Brand & responsive menu -->
+            <div class="navbar-header">
+                <a class="navbar-brand page-scroll" href="#page-top">Peter Szocs</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Peter Szocs</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- Nav links -->
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden"><a href="#page-top"></a></li>
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#music">Music</a></li>
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
@@ -87,7 +86,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li ng-repeat="achievement in achievements">
+                        <li ng-repeat="achievement in achievements" ng-class-even="'timeline-inverted'">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" ng-src="img/about/{{ achievement.imgUrl }}" alt="{{ achievement.imgAlt }}" />
                             </div>
@@ -117,14 +116,10 @@
                 </div>
             </div>
             <div class="row">
-                
                 <div class="col-md-4 col-sm-6 portfolio-item" ng-repeat="song in songs">
-                    <a href="{{ song.src }}" class="portfolio-link" data-toggle="modal">{{ song.src }}</a>
-
-                    <!--<div class="embed-responsive embed-responsive-16by9">-->
-                    <!--    <iframe class="embed-responsive-item" ng-src="{{ song.src }}"></iframe>-->
-                    <!--</div>                    -->
-                    
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" ng-src="{{ song.src }}"></iframe>
+                    </div>                    
                     <div class="portfolio-caption">
                         <h4 ng-bind="song.artist"></h4>
                         <p class="text-muted" ng-bind="song.title"></p>
