--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                         </li>
                         <li class="timeline">
-                            <a href="resume.pdf" class="timeline-image">
+                            <a class="timeline-image" href="resume.pdf" target="_self">
                                 <h4>See
                                     <br/>Full
                                     <br/>Resume</h4>
