--- a/mail/email_template.html
+++ b/mail/email_template.html
@@ -647,7 +647,7 @@
                     
                         <h1>You've got mail</h1>
 
-<h3>July 31</h3>
+<h3>__DATE__</h3>
 
                     </td>
                 </tr>
