--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
                         <li><a href="https://github.com/gepesz"><i class="fa fa-github"></i></a></li>
                     </ul>
                 </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li>
+                            <a href="http://24counter.com/vmap/1438798172/">
+                                <img class="img-rounded" src="http://24counter.com/map/view.php?id=1438798172" height="45">
+	                        </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
