replace ngRoute with ui.router

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="js/animatedHeader.js"></script>
     <script src="js/app.js"></script>
 
@@ -38,14 +38,14 @@
     <![endif]-->
 </head>
 
-<body id="top" data-spy="scroll" data-target=".navbar-fixed-top" ng-app="app" ng-controller="MainController">
+<body id="top" data-spy="scroll" data-target=".navbar-fixed-top" ng-app="app">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand & responsive menu -->
             <div class="navbar-header">
-                <a class="navbar-brand page-scroll" href="#top">Peter Szocs</a>
+                <a class="navbar-brand" scroll-on-click href="#top">Peter Szocs</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -57,9 +57,10 @@
             <!-- Nav links -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="page-scroll" href="#about">About</a></li>
-                    <li><a class="page-scroll" href="#music">Music</a></li>
-                    <li><a class="page-scroll" href="#contact">Contact</a></li>
+                    <li><a scroll-on-click href="#about">About</a></li>
+                    <li><a scroll-on-click href="#portfolio">Portfolio</a></li>
+                    <li><a scroll-on-click href="#music">Music</a></li>
+                    <li><a scroll-on-click href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -71,162 +72,17 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#about" class="page-scroll btn btn-xl">About Me</a>
+                <a class="btn btn-xl" scroll-on-click href="#about">About Me</a>
             </div>
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Who is this guy, anyway?</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li ng-repeat="achievement in achievements" ng-class-even="'timeline-inverted'">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" ng-src="img/about/{{ achievement.imgUrl }}" alt="{{ achievement.imgAlt }}" />
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 ng-bind="achievement.when"></h4>
-                                    <h4 class="subheading" ng-bind="achievement.title"></h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted" ng-bind="achievement.text"></p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline">
-                            <a class="timeline-image" href="resume.pdf" target="_self">
-                                <h4>See
-                                    <br/>Full
-                                    <br/>Resume</h4>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Music Section -->
-    <section id="music" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Music</h2>
-                    <h3 class="section-subheading text-muted">Check out this quick sample of tracks.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item" ng-repeat="song in songs">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" ng-src="{{ song.src }}"></iframe>
-                    </div>                    
-                    <div class="portfolio-caption">
-                        <h4 ng-bind="song.artist"></h4>
-                        <p class="text-muted" ng-bind="song.title"></p>
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Please use this form to say hi!</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="contactForm" ng-submit="sendEmail(formData)" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <!--<pre>contactForm.name.$error = {{ contactForm.name.$error }}</pre>-->
-                                    <input type="text" name="name" placeholder="Your Name *" class="form-control"
-                                            ng-model="formData.name"
-                                            ng-minlength="2"
-                                            ng-maxlength="30"
-                                            maxlength="30"
-                                            ng-required="true">
-                                    <div class="help-block" ng-messages="contactForm.name.$error" ng-show="contactForm.name.$touched">
-                                        <p class="text-danger" ng-message="required">Please enter your name.</p>
-                                        <p class="text-danger" ng-message="minlength">Your name is too short.</p>
-                                        <div ng-messages-include="partials/form_messages.html"></div>
-                                    </div>                                    
-                                </div>
-                                <div class="form-group">
-                                    <!--<pre>contactForm.email.$error = {{ contactForm.email.$error }}</pre>-->
-                                    <input type="email" name="email" placeholder="Your Email *" class="form-control"
-                                            ng-model="formData.email"
-                                            ng-minlength="5"
-                                            ng-maxlength="40"
-                                            maxlength="40"
-                                            ng-required="true">
-                                    <div class="help-block" ng-messages="contactForm.email.$error" ng-show="contactForm.email.$touched">
-                                        <p class="text-danger" ng-message="required">Please enter your email address.</p>
-                                        <p class="text-danger" ng-message="minlength">Your email address is too short.</p>
-                                        <div ng-messages-include="partials/form_messages.html"></div>
-                                    </div>                                    
-                                </div>
-                                <div class="form-group">
-                                    <!--<pre>contactForm.phone.$error = {{ contactForm.phone.$error }}</pre>-->
-                                    <input type="tel" name="phone" placeholder="Your Phone *" class="form-control"
-                                            ng-model="formData.phone"
-                                            ng-minlength="5"
-                                            ng-maxlength="30"
-                                            maxlength="30"
-                                            ng-required="true">
-                                    <div class="help-block" ng-messages="contactForm.phone.$error" ng-show="contactForm.phone.$touched">
-                                        <p class="text-danger" ng-message="required">Please enter your phone number.</p>
-                                        <p class="text-danger" ng-message="minlength">Your phone number is too short.</p>
-                                        <div ng-messages-include="partials/form_messages.html"></div>
-                                    </div>                                    
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <!--<pre>contactForm.message.$error = {{ contactForm.message.$error }}</pre>-->
-                                    <textarea name="message" placeholder="Your Message *" class="form-control"
-                                            ng-model="formData.message"
-                                            ng-minlength="5"
-                                            ng-maxlength="1000"
-                                            maxlength="1000"
-                                            ng-required="true"></textarea>
-                                    <div class="help-block" ng-messages="contactForm.message.$error" ng-show="contactForm.message.$touched">
-                                        <p class="text-danger" ng-message="required">Please enter a message.</p>
-                                        <p class="text-danger" ng-message="minlength">Your message is too short.</p>
-                                        <div ng-messages-include="partials/form_messages.html"></div>
-                                    </div>                                    
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <!--<pre>contactForm.$invalid = {{ contactForm.$invalid }}</pre>-->
-                                <button type="submit" class="btn btn-xl" ng-disabled="contactForm.$invalid">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Angular View -->
-    <ng-view></ng-view>
-
+    <!-- Views -->
+    <div ui-view="about"></div>
+    <div ui-view="portfolio"></div>
+    <div ui-view="music"></div>
+    <div ui-view="contact"></div>
+    
     <!-- Footer -->
     <footer>
         <div class="container">
