remove jQuery's .ready()

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <!-- Nav links -->
-            <div class="collapse navbar-collapse">
+            <div class="navbar-collapse collapse" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a scroll-on-click href="#about">About</a></li>
                     <li><a scroll-on-click href="#portfolio">Portfolio</a></li>
