--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <!-- Brand & responsive menu -->
             <div class="navbar-header">
-                <a class="navbar-brand" scroll-on-click href="#top">Peter Szocs</a>
+                <a class="navbar-brand page-scroll" scroll-on-click href="#top">Peter Szocs</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -57,10 +57,10 @@
             <!-- Nav links -->
             <div class="navbar-collapse collapse" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a scroll-on-click href="#about">About</a></li>
-                    <li><a scroll-on-click href="#portfolio">Portfolio</a></li>
-                    <li><a scroll-on-click href="#music">Music</a></li>
-                    <li><a scroll-on-click href="#contact">Contact</a></li>
+                    <li><a class="page-scroll" scroll-on-click href="#about">About</a></li>
+                    <li><a class="page-scroll" scroll-on-click href="#portfolio">Portfolio</a></li>
+                    <li><a class="page-scroll" scroll-on-click href="#music">Music</a></li>
+                    <li><a class="page-scroll" scroll-on-click href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a class="btn btn-xl" scroll-on-click href="#about">About Me</a>
+                <a class="btn btn-xl page-scroll" scroll-on-click href="#about">About Me</a>
             </div>
         </div>
     </header>
