--- a/mail/email_template.html
+++ b/mail/email_template.html
@@ -1,92 +1,51 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact from your website</title>
-    <style type="text/css">
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		body {
-			font-family: Helvetica;
-			font-size: 100%;
-			color: #606060;
-		}
-		h1 {
-			color: #b2b2b2;
-			font-size: 1.875em;
-		}
-		h3 {
-			font-size: 1.125em;
-		}
-		.container {
-			margin: auto;
-			width: 60%;
-			background-color: #efefef;
-		}
-		.header {
-			height: 5.9375em;
-			position: relative;
-		}
-		.title {
-			position: absolute;
-			margin: 1.125em 2.0625em 0 2.0625em;
-		}
-		.content {
-			position: relative;
-			padding: 0.5625em 1.125em 0.5625em 1.125em;
-		}
-		.header img, .content img {
-			margin: auto;
-			position: absolute;
-			top: 0;
-			bottom: 0;
-		}
-		.content img {
-			right: 0;
-		}
-		.sender {
-			margin: 0 0.5625em 0.5625em 0;
-			text-align: right;
-		}
-		.sender .name {
-			font-weight: bold;
-		}
-		.sender .email, .sender .phone {
-			font-style: italic;
-		}
-		.footer {
-			font-size: 0.6875em;
-			font-style: italic;
-			text-align: center;
-			padding: 1.6em 0 1.6em 0;
-			margin-top: 0.8em;
+  <title>Contact from your website</title>
+	<style type="text/css">
+		@media only screen and (max-width: 480px) {
+			body,table,td,p,a,li,blockquote {
+				-webkit-text-size-adjust:none !important;
+			}
+			table,img[class=mainImg] {
+				width:100% !important;
+			}
 		}
 	</style>
 </head>
-<body>
-	<section class="container">
-		<div class="header">
-			<img src="https://gallery.mailchimp.com/27aac8a65e64c994c4416d6b8/images/image_pointer_left_white.png">
-			<div class="title">
-				<h1>You've got mail</h1>
-				<h3>__DATE__</h3>
-			</div>
-		</div>
-		<div class="content">
-			<div class="sender">
-				<p class="name">__NAME__</p>
-				<p class="email">__EMAIL__</p>
-				<p class="phone">__PHONE__</p>
-			</div>
-			<p>__MESSAGE__</p>
-			<img src="https://gallery.mailchimp.com/27aac8a65e64c994c4416d6b8/images/image_pointer_right_white.1.png">
-		</div>
-	</section>
-	<section class="container footer">
-		Copyright &copy; 2015 Peter Szocs.
-	</section>
+<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="font-family:Helvetica;color:#606060;">
+	<table width="620" cellpadding="0" cellspacing="0" border="0" valign="top" align="center" style="background-color:#efefef;">
+		<tr>
+			<td valign="middle" width="2.5%">
+				<img src="https://gallery.mailchimp.com/27aac8a65e64c994c4416d6b8/images/image_pointer_left_white.png">
+			</td>
+			<td style="padding:1.125em 1.125em;" width="97.5%">
+				<h1 style="font-family:Helvetica;font-size:1.875em;font-weight:bold;color:#b2b2b2;">You've got mail</h1>
+				<h3 style="font-family:Helvetica;font-size:1.125em;font-weight:bold;color:#606060;">__DATE__</h3>
+			</td>
+		</tr>
+		<tr>
+			<td valign="top" style="padding:0px" colspan="2">
+				<img class="mainImg" src="http://gallery.mailchimp.com/0d61bb2ec9002f0e9872b8c36/images/main_image.png" width="620">
+			</td>
+		</tr>
+	</table>
+	<table width="620" cellpadding="0" cellspacing="0" border="0" valign="top" align="center" style="background-color:#efefef;">
+		<tr>
+			<td style="font-family:Helvetica;font-size:1em;color:#606060;padding:1.125em 1.125em;text-align:right;line-height:150%;" width="97.5%">
+				<strong>__NAME__</strong><br>
+        <em>__EMAIL__<br>
+        __PHONE__</em>
+			</td>
+			<td valign="middle" align="right" width="2.5%">
+				<img src="https://gallery.mailchimp.com/27aac8a65e64c994c4416d6b8/images/image_pointer_right_white.png">
+			</td>
+		</tr>
+		<tr>
+			<td style="font-family:Helvetica;font-size:1em;color:#606060;padding:0em 1.6875em 1em 1.6875em;" colspan="2">
+        __MESSAGE__
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
