--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <meta name="author" content="Peter Szocs">
     <base href="/">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="http://peter.szocs.info/img/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="http://peter.szocs.info/img/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://peter.szocs.info/img/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="http://peter.szocs.info/img/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://peter.szocs.info/img/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="http://peter.szocs.info/img/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="http://peter.szocs.info/img/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="http://peter.szocs.info/img/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://peter.szocs.info/img/favicon/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="http://peter.szocs.info/img/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="http://peter.szocs.info/img/favicon/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="http://peter.szocs.info/img/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="http://peter.szocs.info/img/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="http://peter.szocs.info/img/favicon/manifest.json">
+    <link rel="shortcut icon" href="http://peter.szocs.info/img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="http://peter.szocs.info/img/favicon/mstile-144x144.png">
+    <meta name="msapplication-config" content="http://peter.szocs.info/img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#fed136">
+
     <!-- Title -->
     <title>Peter</title>
 
@@ -28,6 +49,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+	<script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
+	<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
     <script src="js/animatedHeader.js"></script>
     <script src="js/app.js"></script>
 
