--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="shortcut icon" href="img/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
-    <meta name="msapplication-config" content="http://peter.szocs.info/img/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#fed136">
 
     <!-- Title -->
@@ -40,7 +40,8 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
-    <link href="css/app.css" rel="stylesheet" type="text/css">
+    <!--<link href="css/app.css" rel="stylesheet" type="text/css">-->
+    <link href="prod/app.css" rel="stylesheet" type="text/css">
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -51,8 +52,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
-    <script src="js/animatedHeader.js"></script>
-    <script src="js/app.js"></script>
+    <!--<script src="js/animatedHeader.js"></script>-->
+    <!--<script src="js/app.js"></script>-->
+    <script src="prod/all.js"></script>
 
     <!-- HTML5 Shiv & Respond.js: Support HTML5 elements and media queries in legacy IEs (< IE9) -->
     <!--[if lt IE 9]>
