--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="theme-color" content="#fed136">
 
     <!-- Title -->
-    <title>Peter</title>
+    <title>Peter Szocs</title>
 
     <!-- CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -40,8 +40,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
-    <!--<link href="css/app.css" rel="stylesheet" type="text/css">-->
-    <link href="prod/app.css" rel="stylesheet" type="text/css">
+    <link href="css/app.css" rel="stylesheet" type="text/css">
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -52,9 +51,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
+    <!-- build:js js/app.js -->
     <!--<script src="js/animatedHeader.js"></script>-->
-    <!--<script src="js/app.js"></script>-->
-    <script src="prod/all.js"></script>
+    <!--<script src="js/main.js"></script>-->
+    <!-- endbuild -->
+    <script src="js/app.js"></script>
 
     <!-- HTML5 Shiv & Respond.js: Support HTML5 elements and media queries in legacy IEs (< IE9) -->
     <!--[if lt IE 9]>
