--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
-    <!-- build:js js/app.js -->
-    <!--<script src="js/animatedHeader.js"></script>-->
-    <!--<script src="js/main.js"></script>-->
-    <!-- endbuild -->
-    <script src="js/app.js"></script>
+    <script src="js/all.js"></script>
 
     <!-- HTML5 Shiv & Respond.js: Support HTML5 elements and media queries in legacy IEs (< IE9) -->
     <!--[if lt IE 9]>
